--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
     <div class="wrapper">
       <header>
-        <h2>{{ site.title | default: site.github.repository_name }}</a></h2>
+        <h1>{{ site.title | default: site.github.repository_name }}</h1>
 
         <p>joseph.de_vilmarest [at] upmc.fr</a></p>
         
