--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="m4LUmNXbFybXbkhgtF6DEBZ4in1Wkgux6AnXVkcyIhU" />
+    <meta name="description" content="Personal website of Joseph de Vilmarest.">
+    <title>Joseph de Vilmarest</title>
 
 {% seo %}
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
