--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,7 +19,7 @@
       <header>
         <h2>{{ site.title | default: site.github.repository_name }}</h2>
 
-        <p>joseph.de_vilmarest [at] upmc.fr</a></p>
+        <p>joseph.de-vilmarest [at] vikingconseil.fr</a></p>
         
         {% if site.logo %}
           <img src="{{site.logo | relative_url}}" alt="Logo" height=256 />
